--- a/src/static/style.css
+++ b/src/static/style.css
@@ -6,18 +6,16 @@
   box-sizing: border-box;
   font-family: 'Raleway', sans-serif;
 }
-html,body{
-  display: grid;
-  height: 100%;
-  width: 100%;
-  place-items: center;
-  background: -webkit-linear-gradient(left, #9896F0,#FBC8D5);
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 ::selection{
   background: #12e8f0;
   color: #fff;
 }
-.wrapper{
+/* .wrapper{
   overflow: hidden;
   max-width: 390px;
   background: #fff;
@@ -92,91 +90,88 @@ input[type="radio"]{
 #login:checked ~ label.login{
   cursor: default;
   user-select: none;
-}
-.wrapper .form-container{
+} */
+/* .wrapper .form-container{
   width: 100%;
   overflow: hidden;
+} */
+.post {
+  padding: 10px;
+  margin: 5px;
+  background-color: #f3f3f3
 }
-.form-container .form-inner{
+.field {
+  max-width: 120px;
+}
+svg {
+  margin-left: 0.5rem;
+  width: 19px;
+  height: 19px; 
+}
+.form-container {
   display: flex;
-  width: 200%;
+  justify-content: space-around;
+  margin: 20px;
 }
-.form-container .form-inner form{
-  width: 50%;
-  transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
-}
-.form-inner form .field{
-  height: 50px;
-  width: 100%;
-  margin-top: 20px;
-}
-.form-inner form .field input{
-  height: 100%;
-  width: 100%;
-  outline: none;
-  padding-left: 15px;
-  border-radius: 5px;
-  border: 1px solid lightgrey;
-  border-bottom-width: 2px;
-  font-size: 17px;
-  transition: all 0.3s ease;
-}
-.form-inner form .field input:focus{
-  border-color: #12e8f0;
-}
-.form-inner form .field input::placeholder{
-  color: #999;
-  transition: all 0.3s ease;
-}
-form .field input:focus::placeholder{
-  color: #b3b3b3;
-}
-.form-inner form .pass-link{
-  margin-top: 5px;
-}
-.form-inner form .signup-link{
-  text-align: center;
-  margin-top: 30px;
-}
-.form-inner form .pass-link a,
-.form-inner form .signup-link a{
-  color: #0e45dd;
-  text-decoration: none;
-}
-.form-inner form .pass-link a:hover,
-.form-inner form .signup-link a:hover{
-  text-decoration: underline;
-}
-form .btn{
-  height: 50px;
-  width: 100%;
-  border-radius: 5px;
-  position: relative;
-  overflow: hidden;
-}
-form .btn .btn-layer{
-  height: 100%;
-  width: 300%;
-  position: absolute;
-  left: -100%;
-  background: -webkit-linear-gradient(right, #FBEE97, #ADEDD5, #FBEE97, #ADEDD5);
-  border-radius: 5px;
-  transition: all 0.4s ease;;
-}
-form .btn:hover .btn-layer{
-  left: 0;
-}
-form .btn input[type="submit"]{
-  height: 100%;
-  width: 100%;
-  z-index: 2;
-  position: relative;
-  background: none;
-  border: none;
-  color: #fff;
-  padding-left: 0;
+.form-box {
+  background-color: white;
+  padding: 20px;
   border-radius: 10px;
-  font-size: 20px;
-  font-weight: 500;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  width: 500px;
+}
+.form-box h2 {
+  text-align: center;
+  padding: 20px;
+}
+.form-box label {
+  display: block;
+  margin: 10px 0 5px;
+}
+.form-box input {
+  /* width: 100%; */
+  min-inline-size:400px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  margin-bottom: 15px;
+  transition: border 0.3s, box-shadow 0.3s;
+}
+.form-box input:focus {
+  border-color: #66afe9;
+  box-shadow: 0 0 5px rgba(102, 175, 233, 0.5);
+}
+.form-box button {
+  width: 100%;
+  padding: 10px;
+  background-color: #28a745;
+  color: white;
+  border: none;
+  border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.3s;
+}
+.form-box button:hover {
+  background-color: #218838;
+}
+.form-box #login {
+  display: inline;
+  /* color: #010100; */
+  border: 2px solid transparent;
+  border-radius: 7px;
+  width: 85px;
+  height: 40px;
+  /* position: absolute; */
+  bottom: 0;
+}
+.form-box #register {
+  display: inline;
+  /* color: #010100; */
+  border: 1px solid transparent;
+  border-radius: 7px;
+  width: 85px;
+  height: 40px;
+  /* position: absolute; */
+  bottom: 0;
 }
